# CourseReg-Cranes-Project

./: CMakeLists.txt  README.md
include/: database.h  gui.h
src/: coursereg.db  coursereg.sql  database  database.c  gui  gui.c  main.c  test  test.c
